--- a/L293D.html
+++ b/L293D.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - L293D</title>
-<link rel="stylesheet" href="css/info.css">
-    <link rel="stylesheet" href="css/carrito.css"></head>
+    <link rel="stylesheet" href="Stensa.CSS">
+</head>
 <body>
     <header>
         <h1>L293D - Driver de Puente H para Motores DC y Paso a Paso</h1>
