--- a/Motorreductores.html
+++ b/Motorreductores.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Motorreductores Amarillos</title>
-<link rel="stylesheet" href="css/info.css">
-    <link rel="stylesheet" href="css/carrito.css"></head>
+    <link rel="stylesheet" href="Stensa.CSS">
+</head>
 <body>
     <header>
         <h1>Motorreductores Amarillos - Control Preciso de Velocidad y Torque</h1>
