--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -1,39 +1,158 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Productos STENSA</title>
-  <link rel="stylesheet" href="css/productos.css" />
-  <link rel="stylesheet" href="css/carrito.css" />
+    <meta charset="UTF-8">
+    <title>Productos STENSA</title>
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
-  <header>
-    <div id="barra-navegacion">
-      <h1>Productos STENSA</h1>
-      <!-- Barra de búsqueda -->
-      <form id="barra-busqueda" onsubmit="buscarProductos(); return false;">
-        <input type="text" id="input-busqueda" placeholder="Buscar productos..." />
-        <button type="submit">🔍</button>
-      </form>
-    </div>
-  </header>
+    <header>
+        <h1 style="text-align:center;">Productos STENSA</h1>
+    </header>
 
-  <main>
-    <section id="productos">
-      <div class="producto">
-        <h3>Arduino Uno</h3>
-        <p>Placa de desarrollo</p>
-        <button class="comprar-btn">Comprar Arduino Uno</button>
-      </div>
-      <div class="producto">
-        <h3>Sensor Ultrasónico</h3>
-        <p>Sensor de distancia</p>
-        <button class="comprar-btn">Comprar Sensor Ultrasónico</button>
-      </div>
-      <!-- Agrega más productos similares -->
-    </section>
-  </main>
+    <button onclick="location.href='index.html'">← Volver al Inicio</button>
 
-  <script src="js/carrito.js"></script>
+    <main>
+        <div class="productos">
+            <section class="producto">
+                <h2><a href="L298N.html">L298N</a></h2>
+                <img src="l298n.jpg" alt="L298N">
+                <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
+                <p class="precio">Precio: Q60 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href="ArduinoUno.html">Arduino UNO</a></h2>
+                <img src="arduino_uno.jpg" alt="Arduino UNO">
+                <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
+                <p class="precio">Precio: Q150 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href="MotoresN20.html">Motores N20 - Motores DC Miniatura</a></h2>
+                <img src="motores_n20.jpg" alt="Motores N20">
+                <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
+                <p class="precio">Precio: Q80 GTQ</p>
+            </section>
+
+            <section class="producto">
+               <h2><a href="Jumpers.html">Jumpers - Cables de Conexión para Proyectos Electrónicos</a></h2>
+                <img src="jumpers.jpg" alt="Jumpers Macho Macho, Hembra Macho">
+                <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
+                <p class="precio">Precio: Q70 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href="SensorUltrasonico.html">Sensor Ultrasónico</a></h2>
+                <img src="sensor_ultrasonico.jpg" alt="Sensor Ultrasónico">
+                <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
+                <p class="precio">Precio: Q120 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href="Llantas.html">Llantas de carrito de juguete</a></h2>
+                <img src="llantas_carrito.jpg" alt="Llantas de carrito de juguete">
+                <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
+                <p class="precio">Precio: Q90 GTQ</p>
+            </section>
+
+            <section class="producto">
+            <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
+            <img src="motorreductores_amarillos.jpg" alt="Motorreductores amarillos">
+            <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
+            <p class="precio">Precio: Q20 GTQ</p>
+            </section>
+
+
+            <section class="producto">
+                <h2><a href = "ArduinoNano.html">Arduino Nano</a></h2>
+                <img src="arduino_nano.jpg" alt="Arduino Nano">
+                <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
+                <p class="precio">Precio: Q125 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href = "ESP32.html">ESP-32<a></h2>
+                <img src="esp32.jpg" alt="ESP-32">
+                <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
+                <p class="precio">Precio: Q450 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href = "L293D.html">L293D<a></h2>
+                <img src="l293d.jpg" alt="L293D">
+                <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
+                <p class="precio">Precio: Q20 GTQ</p>
+            </section>
+
+            <section class="producto">
+                <h2><a href = "SensorLuz.html">Sensor de luz<a></h2>
+                <img src="sensor_luz.jpg" alt="Sensor de luz">
+                <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
+                <p class="precio">Precio: Q35 GTQ</p>
+            </section>
+        </div>
+    </main>
+    <script src="carrito.js"></script>
+
 </body>
 </html>
+
+
+
+
+
+
+PromocionesStensa
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Promociones - STENSA</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="ProductosStensa.html">Productos</a></li>
+            <li><a href="PromocionesStensa.html">Promociones</a></li>
+        </ul>
+    </nav>
+
+    <button onclick="location.href='index.html'">← Volver al Inicio</button>
+
+    <main>
+        <h1>Promociones Especiales por Kit Completo</h1>
+
+        <div class="promociones-lista">
+            <article class="promocion">
+                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
+                <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
+                <p class="precio">Precio especial: Q385 GTQ</p>
+                <button>Comprar Kit</button>
+            </article>
+
+            <article class="promocion">
+                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
+                <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
+                <p class="precio">Precio especial: Q800 GTQ</p>
+                <button>Comprar Kit</button>
+            </article>
+
+            <article class="promocion">
+                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
+                <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
+                <p class="precio">Precio especial: Q1,200 GTQ</p>
+                <button>Comprar Kit</button>
+            </article>
+        </div>
+    </main>
+    <script src="carrito.js"></script>
+
+</body>
+</html>
+
+
+
+
