--- a/SensorLuz.html
+++ b/SensorLuz.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Sensor de Luz</title>
-<link rel="stylesheet" href="css/info.css">
-    <link rel="stylesheet" href="css/carrito.css"></head>
+    <link rel="stylesheet" href="Stensa.CSS">
+</head>
 <body>
     <header>
         <h1>Sensor de Luz - Detección de Niveles de Luz Ambiental</h1>
@@ -50,3 +50,8 @@
 
 </body>
 </html>
+
+
+
+
+
