--- a/ArduinoNano.html
+++ b/ArduinoNano.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Arduino Nano</title>
-    <link rel="stylesheet" href="css/info.css">
-    <link rel="stylesheet" href="css/carrito.css">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
@@ -55,3 +54,4 @@
 
 </body>
 </html>
+
