--- a/ESP32.html
+++ b/ESP32.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - ESP-32</title>
-   <link rel="stylesheet" href="css/info.css">
-    <link rel="stylesheet" href="css/carrito.css">
+    <link rel="stylesheet" href="Stensa.CSS">
 </head>
 <body>
     <header>
