--- a/index.html
+++ b/index.html
@@ -1,53 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Productos STENSA</title>
-  <link rel="stylesheet" href="css/productos.css" />
-  <link rel="stylesheet" href="css/carrito.css" />
+    <meta charset="UTF-8">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="css/inicio.CSS">
+    <style>
+        /* Estilos básicos para mejor visualización */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background: #f4f4f4;
+        }
+        nav {
+            background: #222;
+            padding: 10px 0;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: flex-start;
+            margin: 0;
+            padding: 0 20px;
+        }
+        nav ul li {
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        main {
+            max-width: 900px;
+            margin: 30px auto;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px #0001;
+            padding: 30px;
+        }
+        .imagen-principal img {
+            width: 100%;
+            max-width: 350px;
+            display: block;
+            margin: 0 auto 20px;
+        }
+        .descripcion-principal {
+            text-align: center;
+            margin-bottom: 25px;
+        }
+        .botones-navegacion {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .boton {
+            background: #1976d2;
+            color: #fff;
+            padding: 12px 28px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 1.1em;
+            transition: background 0.2s;
+        }
+        .boton:hover {
+            background: #0d47a1;
+        }
+        .imagen-inferior {
+            width: 100%;
+            max-width: 400px;
+            display: block;
+            margin: 40px auto 0;
+        }
+        @media (max-width: 600px) {
+            main { padding: 10px; }
+            .imagen-principal img,
+            .imagen-inferior { max-width: 95vw; }
+        }
+    </style>
 </head>
 <body>
-  <!-- Barra de navegación -->
-  <header>
-    <div id="barra-navegacion">
-      <h1>Productos STENSA</h1>
-      <!-- Barra de búsqueda -->
-      <form id="barra-busqueda" onsubmit="buscarProductos(); return false;">
-        <input type="text" id="input-busqueda" placeholder="Buscar productos..." />
-        <button type="submit">🔍</button>
-      </form>
-    </div>
-  </header>
+    <!-- Menú de navegación -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="ProductosStensa.html">Productos</a></li>
+        </ul>
+    </nav>
 
-  <button onclick="location.href='index.html'" style="margin: 20px 0 0 30px;">← Volver al Inicio</button>
+    <main>
+        <h1 style="text-align:center;">Bienvenido a STENSA</h1>
 
-  <main>
-    <div class="productos">
-      <section class="producto" data-nombre="L298N">
-        <h3>L298N</h3>
-        <a href="L298N.html">
-          <img src="proyecto.Tics/L298N.png" alt="L298N" />
-        </a>
-        <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
-        <p class="precio">Q60 GTQ</p>
-        <button class="comprar-btn">Comprar</button>
-      </section>
+        <div class="imagen-principal">
+            <img src="proyecto.Tics/minisumo_robot.png" alt="Minisumo Robot">
+        </div>
 
-      <section class="producto" data-nombre="Arduino UNO">
-        <h3>Arduino UNO</h3>
-        <a href="ArduinoUno.html">
-          <img src="proyecto.Tics/arduinouno.png" alt="Arduino UNO" />
-        </a>
-        <p>Placa microcontrolador perfecta para proyectos electrónicos.</p>
-        <p class="precio">Q150 GTQ</p>
-        <button class="comprar-btn">Comprar</button>
-      </section>
+        <section class="descripcion-principal">
+            <p>
+                El Minisumo es un pequeño robot de competición diseñado para participar en torneos de sumo robótico, donde el objetivo es sacar al oponente del ring usando estrategias y sensores.
+            </p>
+        </section>
 
-      <!-- Agrega acá los demás productos igual -->
+        <div class="botones-navegacion">
+            <a href="ProductosStensa.html" class="boton">Ver Productos</a>
+            <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
+        </div>
 
-    </div>
-  </main>
+        <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
+    </main>
 
-  <script src="js/carrito.js"></script>
+    <!-- Enlazamos el archivo JavaScript externo para el carrito flotante -->
+    <script src="carrito.js"></script>
 </body>
 </html>
