--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -14,145 +14,87 @@
 
     <main>
         <div class="productos">
+
             <section class="producto">
                 <h2><a href="L298N.html">L298N</a></h2>
                 <img src="l298n.jpg" alt="L298N">
-                <p>Driver para motores DC y paso a paso, ideal para controlar motores N20 con Arduino.</p>
+                <p>Driver para motores DC y paso a paso.</p>
                 <p class="precio">Precio: Q60 GTQ</p>
+                <button class="btn-comprar" data-nombre="L298N" data-precio="60">Comprar</button>
             </section>
-
             <section class="producto">
                 <h2><a href="ArduinoUno.html">Arduino UNO</a></h2>
                 <img src="arduino_uno.jpg" alt="Arduino UNO">
-                <p>Placa de desarrollo microcontrolador basada en ATmega328P, perfecta para proyectos electrónicos.</p>
+                <p>Placa de desarrollo basada en ATmega328P, perfecta para proyectos electrónicos.</p>
                 <p class="precio">Precio: Q150 GTQ</p>
+                <button class="btn-comprar" data-nombre="Arduino Uno" data-precio="150">Comprar</button>
             </section>
-
             <section class="producto">
-                <h2><a href="MotoresN20.html">Motores N20 - Motores DC Miniatura</a></h2>
+                <h2><a href="MotoresN20.html">Motores N20</a></h2>
                 <img src="motores_n20.jpg" alt="Motores N20">
-                <p>Motores eléctricos compactos y eficientes, usados en robots y pequeños dispositivos.</p>
+                <p>Motores eléctricos compactos y eficientes, usados en robots y dispositivos pequeños.</p>
                 <p class="precio">Precio: Q80 GTQ</p>
+                <button class="btn-comprar" data-nombre="Motor N20" data-precio="80">Comprar</button>
             </section>
-
             <section class="producto">
-               <h2><a href="Jumpers.html">Jumpers - Cables de Conexión para Proyectos Electrónicos</a></h2>
-                <img src="jumpers.jpg" alt="Jumpers Macho Macho, Hembra Macho">
+                <h2><a href="Jumpers.html">Jumpers</a></h2>
+                <img src="jumpers.jpg" alt="Jumpers">
                 <p>Cables de conexión para protoboards y placas, esenciales para prototipos electrónicos.</p>
                 <p class="precio">Precio: Q70 GTQ</p>
+                <button class="btn-comprar" data-nombre="Jumpers" data-precio="70">Comprar</button>
             </section>
-
             <section class="producto">
                 <h2><a href="SensorUltrasonico.html">Sensor Ultrasónico</a></h2>
                 <img src="sensor_ultrasonico.jpg" alt="Sensor Ultrasónico">
-                <p>Sensor para medir distancia mediante ondas ultrasónicas, común en robótica y automatización.</p>
+                <p>Sensor para medir distancia mediante ultrasonido, común en robótica y automatización.</p>
                 <p class="precio">Precio: Q120 GTQ</p>
+                <button class="btn-comprar" data-nombre="Sensor Ultrasónico" data-precio="120">Comprar</button>
             </section>
-
             <section class="producto">
-                <h2><a href="Llantas.html">Llantas de carrito de juguete</a></h2>
-                <img src="llantas_carrito.jpg" alt="Llantas de carrito de juguete">
+                <h2><a href="Llantas.html">Llantas de carrito</a></h2>
+                <img src="llantas_carrito.jpg" alt="Llantas de carrito">
                 <p>Juego de llantas pequeñas ideales para robots y vehículos a escala.</p>
                 <p class="precio">Precio: Q90 GTQ</p>
+                <button class="btn-comprar" data-nombre="Llantas" data-precio="90">Comprar</button>
             </section>
-
             <section class="producto">
-            <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
-            <img src="motorreductores_amarillos.jpg" alt="Motorreductores amarillos">
-            <p>Motorreductores compactos con carcasa amarilla, usados para control preciso de velocidad y torque.</p>
-            <p class="precio">Precio: Q20 GTQ</p>
-            </section>
-
-
-            <section class="producto">
-                <h2><a href = "ArduinoNano.html">Arduino Nano</a></h2>
-                <img src="arduino_nano.jpg" alt="Arduino Nano">
-                <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con espacio limitado.</p>
-                <p class="precio">Precio: Q125 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2><a href = "ESP32.html">ESP-32<a></h2>
-                <img src="esp32.jpg" alt="ESP-32">
-                <p>Módulo potente con WiFi y Bluetooth integrado, perfecto para proyectos IoT y conectividad inalámbrica.</p>
-                <p class="precio">Precio: Q450 GTQ</p>
-            </section>
-
-            <section class="producto">
-                <h2><a href = "L293D.html">L293D<a></h2>
-                <img src="l293d.jpg" alt="L293D">
-                <p>Driver de puente H para controlar motores DC y paso a paso con facilidad y eficiencia.</p>
+                <h2><a href="Motorreductores.html">Motorreductores amarillos</a></h2>
+                <img src="motorreductores_amarillos.jpg" alt="Motorreductores amarillos">
+                <p>Motorreductores compactos con carcasa amarilla, usados para controlar velocidad y torque.</p>
                 <p class="precio">Precio: Q20 GTQ</p>
+                <button class="btn-comprar" data-nombre="Motorreductores" data-precio="20">Comprar</button>
             </section>
-
             <section class="producto">
-                <h2><a href = "SensorLuz.html">Sensor de luz<a></h2>
-                <img src="sensor_luz.jpg" alt="Sensor de luz">
-                <p>Sensor que detecta niveles de luz ambiental, útil para automatización y proyectos de iluminación.</p>
-                <p class="precio">Precio: Q35 GTQ</p>
+                <h2><a href="ArduinoNano.html">Arduino Nano</a></h2>
+                <img src="arduino_nano.jpg" alt="Arduino Nano">
+                <p>Placa microcontroladora pequeña y versátil, ideal para proyectos con poco espacio.</p>
+                <p class="precio">Precio: Q125 GTQ</p>
+                <button class="btn-comprar" data-nombre="Arduino Nano" data-precio="125">Comprar</button>
             </section>
+            <section class="producto">
+                <h2><a href="ESP32.html">ESP-32</a></h2>
+                <img src="esp32.jpg" alt="ESP-32">
+                <p>Módulo con WiFi y Bluetooth integrado, ideal para proyectos IoT.</p>
+                <p class="precio">Precio: Q450 GTQ</p>
+                <button class="btn-comprar" data-nombre="ESP-32" data-precio="450">Comprar</button>
+            </section>
+            <section class="producto">
+                <h2><a href="L293D.html">L293D</a></h2>
+                <img src="l293d.jpg" alt="L293D">
+                <p>Driver de puente H para motores DC y paso a paso.</p>
+                <p class="precio">Precio: Q20 GTQ</p>
+                <button class="btn-comprar" data-nombre="L293D" data-precio="20">Comprar</button>
+            </section>
+            <section class="producto">
+                <h2><a href="SensorLuz.html">Sensor de Luz</a></h2>
+                <img src="sensor_luz.jpg" alt="Sensor de Luz">
+                <p>Sensor LDR para detectar niveles de luz ambiental, útil en automatización y domótica.</p>
+                <p class="precio">Precio: Q35 GTQ</p>
+                <button class="btn-comprar" data-nombre="Sensor de Luz" data-precio="35">Comprar</button>
+            </section>
+
         </div>
     </main>
     <script src="carrito.js"></script>
-
 </body>
 </html>
-
-
-
-
-
-
-PromocionesStensa
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="estilos.css">
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="ProductosStensa.html">Productos</a></li>
-            <li><a href="PromocionesStensa.html">Promociones</a></li>
-        </ul>
-    </nav>
-
-    <button onclick="location.href='index.html'">← Volver al Inicio</button>
-
-    <main>
-        <h1>Promociones Especiales por Kit Completo</h1>
-
-        <div class="promociones-lista">
-            <article class="promocion">
-                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
-                <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
-                <p class="precio">Precio especial: Q385 GTQ</p>
-                <button>Comprar Kit</button>
-            </article>
-
-            <article class="promocion">
-                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
-                <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
-                <p class="precio">Precio especial: Q800 GTQ</p>
-                <button>Comprar Kit</button>
-            </article>
-
-            <article class="promocion">
-                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
-                <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
-                <p class="precio">Precio especial: Q1,200 GTQ</p>
-                <button>Comprar Kit</button>
-            </article>
-        </div>
-    </main>
-    <script src="carrito.js"></script>
-
-</body>
-</html>
-
-
-
-
