--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -21,28 +21,28 @@
 
         <div class="promociones-lista">
             <article class="promocion">
-                <h3><a href = "KitBasico.html">Kit Básico Minisumo<a></h3>
+                <h3><a href="KitBasico.html">Kit Básico Minisumo</a></h3>
                 <p>Incluye Arduino UNO, motores N20, driver L298N y accesorios esenciales.</p>
                 <p class="precio">Precio especial: Q385 GTQ</p>
-                <button>Comprar Kit</button>
+                <button class="btn-comprar" data-nombre="Kit Básico" data-precio="385">Comprar Kit</button>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitAvanzado.html">Kit Avanzado Minisumo<a></h3>
+                <h3><a href="KitAvanzado.html">Kit Avanzado Minisumo</a></h3>
                 <p>Todo el Kit Básico más sensor ultrasónico y llantas de carrito de juguete.</p>
                 <p class="precio">Precio especial: Q800 GTQ</p>
-                <button>Comprar Kit</button>
+                <button class="btn-comprar" data-nombre="Kit Avanzado" data-precio="800">Comprar Kit</button>
             </article>
 
             <article class="promocion">
-                <h3><a href = "KitProfesional.html">Kit Profesional Minisumo<a></h3>
+                <h3><a href="KitProfesional.html">Kit Profesional Minisumo</a></h3>
                 <p>Incluye Kit Avanzado, motorreductores amarillos y sensores adicionales.</p>
-                <p class="precio">Precio especial: Q1,200 GTQ</p>
-                <button>Comprar Kit</button>
+                <p class="precio">Precio especial: Q1200 GTQ</p>
+                <button class="btn-comprar" data-nombre="Kit Profesional" data-precio="1200">Comprar Kit</button>
             </article>
         </div>
     </main>
+    <!-- Asegúrate que el carrito.js esté al final, antes de cerrar body -->
     <script src="carrito.js"></script>
-
 </body>
 </html>
