--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/inicio.CSS">
+        <link rel="stylesheet" href="css/carrito.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
