--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/inicio.CSS">
+    <link rel="stylesheet" href="css/inicio.css">
         <link rel="stylesheet" href="css/carrito.css">
 
     <style>
