--- a/ProductosStensa.html
+++ b/ProductosStensa.html
@@ -143,7 +143,7 @@
         </div>
     </main>
 
-    <script src="js/carrito.js"></script>
+    <script src="carrito.js"></script>
     <!-- Si tienes el script de búsqueda, inclúyelo aquí -->
     <script>
       function buscarProductos() {
