--- a/index.html
+++ b/index.html
@@ -10,25 +10,7 @@
             margin: 0;
             background: #f4f4f4;
         }
-        nav {
-            background: #222;
-            padding: 10px 0;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            justify-content: flex-start;
-            margin: 0;
-            padding: 0 20px;
-        }
-        nav ul li {
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
+        /* Eliminé el nav y su estilo */
         main {
             max-width: 900px;
             margin: 30px auto;
@@ -47,24 +29,7 @@
             text-align: center;
             margin-bottom: 25px;
         }
-        .botones-navegacion {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-        .boton {
-            background: #1976d2;
-            color: #fff;
-            padding: 12px 28px;
-            border-radius: 6px;
-            text-decoration: none;
-            font-size: 1.1em;
-            transition: background 0.2s;
-        }
-        .boton:hover {
-            background: #0d47a1;
-        }
+        /* Eliminé el bloque .botones-navegacion */
         .imagen-inferior {
             width: 100%;
             max-width: 400px;
@@ -147,13 +112,7 @@
     </style>
 </head>
 <body>
-    <!-- Menú de navegación -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="ProductosStensa.html">Productos</a></li>
-        </ul>
-    </nav>
+    <!-- Eliminado el menú de navegación -->
 
     <!-- Buscador de Productos EN INICIO -->
     <section id="buscador-inicio">
@@ -175,10 +134,7 @@
             </p>
         </section>
 
-        <div class="botones-navegacion">
-            <a href="ProductosStensa.html" class="boton">Ver Productos</a>
-            <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
-        </div>
+        <!-- Eliminada la sección de botones-navegacion -->
 
         <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
     </main>
