--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             margin: 0;
             background: #f4f4f4;
         }
-        /* Eliminé el nav y su estilo */
         main {
             max-width: 900px;
             margin: 30px auto;
@@ -29,7 +28,24 @@
             text-align: center;
             margin-bottom: 25px;
         }
-        /* Eliminé el bloque .botones-navegacion */
+        .botones-navegacion {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .boton {
+            background: #1976d2;
+            color: #fff;
+            padding: 12px 28px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 1.1em;
+            transition: background 0.2s;
+        }
+        .boton:hover {
+            background: #0d47a1;
+        }
         .imagen-inferior {
             width: 100%;
             max-width: 400px;
@@ -112,7 +128,8 @@
     </style>
 </head>
 <body>
-    <!-- Eliminado el menú de navegación -->
+
+    <!-- Menú de navegación eliminado -->
 
     <!-- Buscador de Productos EN INICIO -->
     <section id="buscador-inicio">
@@ -134,7 +151,10 @@
             </p>
         </section>
 
-        <!-- Eliminada la sección de botones-navegacion -->
+        <div class="botones-navegacion">
+            <a href="ProductosStensa.html" class="boton">Ver Productos</a>
+            <a href="PromocionesStensa.html" class="boton">Ver Promociones</a>
+        </div>
 
         <img src="proyecto.Tics/partedeabajo.png" alt="Parte de abajo" class="imagen-inferior">
     </main>
