--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Promociones - STENSA</title>
+    <h1>Promociones - STENSA</h1>
     <link rel="stylesheet" href="promo.CSS">
 </head>
 <body>
