--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Promociones - STENSA</title>
-    <link rel="stylesheet" href="promo.CSS">
+    <link rel="stylesheet" href="promo.css">
 </head>
 <body>
     <nav>
