--- a/ArduinoUno.html
+++ b/ArduinoUno.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Arduino UNO</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="info.css">
 </head>
 <body>
     <header>
