--- a/ArduinoNano.html
+++ b/ArduinoNano.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - Arduino Nano</title>
-    <link rel="stylesheet" href="info.css">
+    <link rel="stylesheet" href="css/info.css">
 </head>
 <body>
     <header>
