--- a/PromocionesStensa.html
+++ b/PromocionesStensa.html
@@ -14,7 +14,7 @@
         </ul>
     </nav>
 
-    <button onclick="location.href='index.html'">← Volver al Inicio</button>
+<button class="btn-volver-inicio" onclick="location.href='index.html'">← Volver al Inicio</button>
 
     <main>
         <h1>Promociones Especiales por Kit Completo</h1>
