--- a/L293D.html
+++ b/L293D.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto - L293D</title>
-    <link rel="stylesheet" href="Stensa.CSS">
+    <link rel="stylesheet" href="css/info.css">
 </head>
 <body>
     <header>
